--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -107,9 +107,9 @@ en:
       successful_activities: "Actividades exitosas"
       neutral_activities: "Actividades neutrales"
       failed_activities: "Actividades fallidas"
-      completed_activities_rate: "Completar tasa de actividades"
-      success_rate: "Tasa de exito"
-      state_of_activities: "Estado de las actividades de los últimos meses"
+      completed_activities_rate: "Porcentaje de actividades completadas"
+      success_rate: "Porcentaje de éxito"
+      state_of_activities: "Estado de las actividades realizadas en los últimos meses"
       upcoming_activities: "Próximas actividades"
       all_activities: "Ver todas las actividades"
       date: "Datos"
@@ -121,7 +121,7 @@ en:
       outcomes_without_upcoming_activities: "Resultados sin próximas actividades"
       outcomes_with_overdue_activities: "Resultados sin actividades vencidas"
       percentage_interim_outcomes_achieved: "Porcentaje de resultados intermedios logrados"
-      percentage_allocation_of_predefined_activities: "Asignación de Porcentaje a actividades predefinidas"
+      percentage_allocation_of_predefined_activities: "Porcentaje de asignación de actividades predefinidas"
       objetives: "Objetivos"
       objectives_without_interim_outcomes: "Objectivos sin resultados intermedios"
       objectives_with_failed_activities: "Objectivos sin actividades fallidas"
