--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,7 +37,7 @@ en:
       testimony2_signer: "Unicef Goodwill Ambassador Angélique Kidjo"
       testimony3_txt: "Align advocacy width other areas and organization goals, both long and short term"
       testimony3_signer: "UNICEF Ambassador Matt Dawson"
-      guest_main_txt: "Marcel, you are the best!."
+      guest_main_txt: "Marcel, you are the best!"
       sign_up: "Sign up"
       email_placeholder: "Email"
       password_placeholder: "Password"
