--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -145,7 +145,7 @@ en:
       problem: "Problema"
       problem_description: "Descripción"
       focus_area: "Área de focalización"
-      data_entry: "Ingre de datos"
+      data_entry: "Ingreso de datos"
       add_button: "Agregar"
       edit_button: "Editar"
       explanation_examples: "Explicaciones y Ejemplos"
