--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -96,11 +96,11 @@ en:
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>"
-      objective_cnt: 'objectivos'
+      objective_cnt: 'Objectivo'
     overview:     # http://localhost:3000/projects/1#overview
       projects: "Proyectos"
       overview: "Resumen"
-      empty: "( Campo vacío )"
+      empty: "( Sin datos )"
       uncreated: "( No creado )"
     dashboard:    # http://localhost:3000/projects/1#dashboard
       activities: "Actividades"
