cambio texto banner y footer

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -37,7 +37,7 @@ en:
       testimony2_signer: "Unicef Goodwill Ambassador Angélique Kidjo"
       testimony3_txt: "Align advocacy width other areas and organization goals, both long and short term"
       testimony3_signer: "UNICEF Ambassador Matt Dawson"
-      guest_main_txt: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor."
+      guest_main_txt: "Estratega es una metodología de advocacy que reduce los riesgos y aumenta el desempeño de tu equipo al momento de llevar a cabo un plan estratégico para incidir en políticas públicas"
       sign_up: "Registrate"
       email_placeholder: "Email"
       password_placeholder: "Contraseña"
