--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -965,7 +965,7 @@ en:
       actor: "Actor"
       ask: "Petición"
       ask_placeholder: "Escribir la Petición"
-      execution: "ejecución"
+      execution: "Ejecutado"
       save_button: "Guardar"
       cancel_button: "Cancelar"
     explanation_stage6: #tab `Explanation & Examples` of stage 6
