--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -264,7 +264,7 @@ en:
       error_updating_goal: "Error al subir la información de la meta"
       guide_me: "Guíame"
       step_one: "Aquí tenemos dos tipos de ingresos: Meta y Objectivos"
-      step_two: "Recuerda que puedes <strong>Agregar</strong> y <strong>Editar</strong> con los botones naranjos y añadir <strong>información adicional</strong> con los botones azules"
+      step_two: "Recuerda que puedes <strong>Agregar</strong> y <strong>Editar</strong> con los botones naranjos y acceder a <strong>información adicional</strong> con los botones azules"
       step_three: "Esta alerta le informará sobre el número de soluciones sin objetivo asociado"
       step_four: "Al pulsar el texto de la ventana de alerta se mostrará una lista de soluciones, y las de color <strong class='red'>rojo</strong> serán las que estan sin asignar"
       step_five: "En esta selección se puede <strong>Agregar objetivos</strong> y <strong> asociarse con soluciones</strong>"
