--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -446,7 +446,7 @@ en:
       cancel_button: "Cancelar"
     explanation_stage3: #tab `Explanation & Examples` of stage 3
       explanation: "Explicación"
-      title1: "comprensión de los ciclos políticos y los de toma de decisión"
+      title1: "Comprensión de los ciclos políticos y los de toma de decisión"
       title1_description: |
                           <p>Las decisiones relacionadas con políticas públicas a menudo se hacen de acuerdo a un ciclo o programa. Para maximizar la influencia de la organización es necesario tener una buena comprensión de los procesos políticos. Esto en un primer lugar porque el análisis del proceso de toma de decisión ayuda a identificar oportunidades y puntos de partida para comenzar a influir respecto a un tema determinado, y en segundo lugar, porque las intervenciones de último minuto rara vez funcionan, por lo cual, mientras antes se inserte una idea en el ciclo político, más efectivo será el resultado.</p>
                           <p>El ciclo de las políticas públicas está compuesto de cuatro fases:</p>
