--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -698,7 +698,7 @@ en:
       description: "Descripción"
       outcomes: "Resultados"
       actions: "Acciones"
-      download_as_ical: "Downloads activities as iCal"
+      download_as_ical: "Exportar actividades en iCal"
       error_getting_outcomes: "Error al obtener la información de los resultados"
       error_getting_asks: "Error al obtener la información de las peticiones"
       error_getting_activities: "Error al obtener la información de las actividades"
@@ -711,7 +711,7 @@ en:
       title_placeholder: "Ingrese un título para la actividad"
       description: "Descripción"
       description_placeholder: "Ingrese una descripción para la actividad"
-      completion: "¿finalizó?"
+      completion: "¿Finalizó?"
       organizer: "Tipo de evento"
       activity_types: "Tipos de actividades"
       scheduling: "Fecha"
