traducción title acciones

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -112,8 +112,8 @@ en:
       state_of_activities: "Estado de las actividades realizadas en los últimos meses"
       upcoming_activities: "Próximas actividades"
       all_activities: "Ver todas las actividades"
-      date: "Datos"
-      activity: "actividad"
+      date: "Fecha"
+      activity: "Actividad"
       overdue_activities: "Actividades vencidas"
       unfinished_activities: "Actividades no finalizadas"
       interim_outcomes: "Resultados intermedios"
