se agregan traducciones

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -698,6 +698,9 @@ en:
       description: "Descripción"
       outcomes: "Resultados"
       actions: "Acciones"
+      date: "Fecha"
+      progress: "Progreso"
+      completion: "Finalizado"
       download_as_ical: "Exportar actividades en iCal"
       error_getting_outcomes: "Error al obtener la información de los resultados"
       error_getting_asks: "Error al obtener la información de las peticiones"
