--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -37,6 +37,7 @@ en:
       testimony2_signer: "Unicef Goodwill Ambassador Angélique Kidjo"
       testimony3_txt: "Align advocacy width other areas and organization goals, both long and short term"
       testimony3_signer: "UNICEF Ambassador Matt Dawson"
+      title_orgs: "Usan esta herramienta"
       guest_main_txt: "Reduce los riesgos y aumenta el desempeño de tu equipo al momento de incidir en políticas públicas"
       sign_up: "Registrate"
       email_placeholder: "Email"
