Corrección y incorporación de traducciones actividades

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -715,11 +715,15 @@ es:
       activity_types: "Tipos de actividades"
       scheduling: "Fecha"
       outcome: "Resultado"
+      outcome_label: "Seleccione Resultado(s) intermedio(s)"
+      ask_label: "Seleccione Petición(es)"
       save_button: "Guardar"
       cancel_button: "Cancelar"
     modal_indicator:
       owner_name: "Encargado"
+      owner_name_place: "Ingrese nombre de Encargado"
       owner_role: "Puesto"
+      owner_role_place: "Ingrese puesto de Encargado"
       expected_results: "Resultados esperados"
       obtained_results: "Resultados obtenidos"
       settings: "Ajustes"
