--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -241,12 +241,12 @@ es:
       without_objectives_begin_sentence: "Todavía hay"
       without_objectives_end_sentence: "Soluciones de política pública sin objetivos"
       objectives: "Objetivos"
-      subtotal_key_contribution: "Subtotal contribución clave"
+      subtotal_key_contribution: "Subtotal Contribución Clave"
       subtotal_momentum: "Subtotal Momentum"
-      subtotal_comparative_advantage: "Subtotal ventaja comparativa"
+      subtotal_comparative_advantage: "Subtotal Ventaja Comparativa"
       total: "Total"
       prioritized: "Priorizado"
-      policy_solutions: "Solución de políticas públicas"
+      policy_solutions: "Solución de Políticas Públicas"
       actions: "Acciones"
       error_focus_area: "Error al agregar información del área de focalización"
       error_objective_types: "Error al agregar información de los tipos de objetivos"
