--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -167,15 +167,15 @@ es:
       step_three: "Ahora agrega <strong>Problemas de política pública</strong>, los que se agrupan en <strong>Soluciones de política pública</strong>"
       step_four: "Para volver a la página indice (anterior), presiona el link con el nombre del proyecto"
     policy_modal: # modal `add policy` of stage 1
-      policy: "Política pública"
+      policy: "Problema de política pública"
       title: "Título"
       title_placeholder: "Ingrese un título para el problema"
       save_button: "Guardar"
       cancel_button: "Cancelar"
     solution_modal:  # modal `add solution` of stage 1
-      solution: "Solución"
+      solution: "Solución de política pública"
       title: "Título"
-      title_placeholder: "Ingrese el título del problema"
+      title_placeholder: "Ingrese el título de la solución"
       save_button: "Guardar"
       cancel_button: "Cancelar"
     explanation:  #tab `Explanation & Examples` of stage 1
