--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -685,8 +685,8 @@ es:
       title: "¿Qué van a hacer como organización para alcanzar sus objetivos de advocacy?"
       title_description: "Las actividades son la materialización del proceso de advocacy, es decir, las principales acciones que se llevarán a cabo con el fin de contribuir al cambio deseado. Los tipos de acciones realizables son numerosas y cada una puede contribuir a un resultado diferente."
       subtitle1: "¿Qué acciones se deben llevar a cabo para lograr los resultados intermedios? "
-      subtitle2: "Importe sus actividades en el calendario"
-      subtitle2_explanation: "Para efectos de la planificación y coordinación, es útil poner las actividades a realizar en Trello. La integración con Trello estará disponible pronto."
+      subtitle2: "Descargue las actividades para agregarlas a su calendario"
+      subtitle2_explanation: "Se descargará un archivo con formato ical. En este se encuentran todas las actividades y sus fechas, las que se pueden importar en las aplicaciones de Calendario, Google Calendar, o en otras herramientas de gestión"
       data_entry: "Ingreso de datos"
       explanation_examples: "Explicaciones y ejemplos"
       workshop_tips: "Consejos para el taller"
@@ -722,14 +722,19 @@ es:
       save_button: "Guardar"
       cancel_button: "Cancelar"
     modal_indicator:
+      indicators: "Indicadores"
       owner_name: "Encargado"
-      owner_name_place: "Ingrese nombre de Encargado"
-      owner_role: "Puesto"
-      owner_role_place: "Ingrese puesto de Encargado"
+      owner_name_place: "Ingrese nombre de encargado"
+      owner_role: "Puesto del encargado"
+      owner_role_place: "Ingrese puesto de encargado"
       expected_results: "Resultados esperados"
+      expected_results_place: "Ingrese listado de resultados esperados"
       obtained_results: "Resultados obtenidos"
+      obtained_results_place: "Ingrese listado de resultados obtenidos"
       settings: "Ajustes"
-      percentage: "Porcentaje éxito"
+      settings_place: "¿Qué ajustes haría la próxima vez que tenga que realizar este tipo de actividades?"
+      percentage: "Porcentaje de éxito"
+      percentage_place: "Ingrese el porcentaje éxito de la actividad"
       save_button: "Guardar"
       cancel_button: "Cancelar"
     explanation_stage5: #tab `Explanation & Examples` of stage 5
