--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -137,7 +137,7 @@ es:
       subtitle2: "¿Cuales son las causas políticas relacionadas al problema público?"
       subtitle2_tooltip: "Como se mencionaba anteriormente, detrás de los problemas públicos existen múltiples causas, incluyendo los programas políticos y las malas prácticas relacionadas con el ambiente político. La labor de la estrategia de advocacy se refiere a causas tales como mecanismos de gobernabilidad deficientes, la existencia de un marco jurídico inadecuado o la presencia de relaciones de poder desequilibradas. Por lo anterior, el análisis del problema debería priorizar la identificación a estas causas en lugar de otros factores explicativos del problema público."
       subtitle3: "¿Qué soluciones políticas podrían constituir una respuesta adecuada para enfrentar el problema público?"
-      subtitle3_tooltip: "¿Qué soluciones políticas podrían constituir una respuesta adecuada para enfrentar el problema público?"
+      subtitle3_tooltip: "Las soluciones de política pública se refieren principalmente a: El desarrollo de políticas, Establecimiento de un tema en la agenda política, Adopción de políticas públicas, Bloqueo de políticas públicas, Implementación de políticas públicas, Mantenimiento de políticas públicas, Entre otros."
       problem: "Problema"
       problem_description: "Descripción"
       focus_area: "Área de focalización"
