--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -162,7 +162,7 @@ es:
       confirm_delete_solution: "¿Estás seguro de que quieres eliminar esta solución?"
       confirm_delete_policy: "¿Estás seguro de que quieres eliminar el problema de política pública?"
       guide_me: "Guíame"
-      step_one: "En todas las etapas se encontrarán dos secciones. <strong>Ingreso de datos</strong>, que nos dará la posibilidad de ingresar información en el sistema, y <strong>Explicaciones y ejemplos</strong> que explicará la etapa paso a paso."
+      step_one: "En todas las etapas se encontrarán dos secciones. <strong>Ingreso de datos</strong>, que nos dará la posibilidad de ingresar información en el sistema, y <strong>Explicaciones y Ejemplos</strong> que explicará la etapa paso a paso."
       step_two: "Para añadir información presiona <i class='fa fa-plus-circle'></i> <strong>Agregar</strong>, y si necesitas una guía puedes presionar <i class='fa fa-info'></i>. Una vez introducidos los datos, solo tienes que presionar <i class='fa fa-pencil'></i> <strong>Editar</strong> para modificar la información."
       step_three: "Ahora agrega <strong>Problemas de política pública</strong>, los que se agrupan en <strong>Soluciones de política pública</strong>"
       step_four: "Para volver a la página indice (anterior), presiona el link con el nombre del proyecto"
@@ -390,7 +390,7 @@ es:
       step_two: "Agrega a los actores involucrados en el plan de advocacy con el botón <strong>Agregar actor</strong>, luego puedes editarlos o eliminarlos en la columna de acciones"
       step_three: "Ingresa las barreras con el botón <strong>Agregar barreras</strong> y los factores habilitantes con el botón <strong>Agregar factores habilitantes</strong>"
       data_entry: "Ingreso de datos"
-      explanation_examples: "Explicaciones y ejemplos"
+      explanation_examples: "Explicaciones y Ejemplos"
       draw_sandbox_button: "Dibujar en draw.io"
       add_actor_button: "Agregar actor"
       all_actors: "Todos los actores"
@@ -567,7 +567,7 @@ es:
       guide_me: "Guíame"
       step_one: "Defina sus resultados intermedios agregandolos con el botón <i class='fa fa-plus-circle'></i> <strong>Agregar</strong>"
       step_two: "En el siguiente paso podrás asociar actividades, su número se reflejará en esta columna"
-      explanation_examples: "Explicaciones y ejemplos"
+      explanation_examples: "Explicaciones y Ejemplos"
       add_button: "Agregar"
       interim_outcome: "Resultado intermedio"
       interim_outcome_type: "Tipo de resultado intermedio"
@@ -725,7 +725,7 @@ es:
       subtitle2: "Descargue las actividades para agregarlas a su calendario"
       subtitle2_explanation: "Se descargará un archivo con formato ical. En este se encuentran todas las actividades y sus fechas, las que se pueden importar en las aplicaciones de Calendario, Google Calendar, o en otras herramientas de gestión"
       data_entry: "Ingreso de datos"
-      explanation_examples: "Explicaciones y ejemplos"
+      explanation_examples: "Explicaciones y Ejemplos"
       workshop_tips: "Consejos para el taller"
       add_button: "Agregar"
       without_activities: "En este punto se deben describir las principales acciones que llevarán al cambio deseado."
@@ -997,7 +997,7 @@ es:
       subtitle1: "¿Cuál será la petición para cada actor?"
       subtitle1_explanation: "Una petición debe ser clara, concisa, centrada en el resultado y adaptada a cada actor. Las peticiones también pueden ser entendidas como una solicitud a un actor clave o un grupo de actores para que estos lleven a cabo una acción que genere el cumplimiento de los resultados intermedios."
       data_entry: "Ingreso de datos"
-      explanation_examples: "Explicaciones y ejemplos"
+      explanation_examples: "Explicaciones y Ejemplos"
       workshop_tips: "Consejos para el taller"
       add_button: "Agregar"
       actor: "Actor"
