--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -31,13 +31,14 @@ es:
       sentence_keep_track: "Realiza un seguimiento y evalúa el rendimiento organizacional"
       button_demo: "Demo"
       button_read_more: "Quiero saber más acerca de esto"
+      testimony: "Testimonios"
       testimony1_txt: "Align advocacy width other areas and organization goals, both long and short term"
       testimony1_signer: "UNICEF Ambassador Matt Dawson"
       testimony2_txt: "Align advocacy width other areas and organization goals, both long and short term"
       testimony2_signer: "Unicef Goodwill Ambassador Angélique Kidjo"
       testimony3_txt: "Align advocacy width other areas and organization goals, both long and short term"
       testimony3_signer: "UNICEF Ambassador Matt Dawson"
-      title_orgs: "Usan esta herramienta"
+      title_orgs: "Usan Estratega"
       guest_main_txt: "Reduce los riesgos y aumenta el desempeño de tu equipo al momento de incidir en políticas públicas"
       sign_up: "Registrate"
       email_placeholder: "Email"
